fixed feedback overflow

--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -62,6 +62,7 @@
   list-style-type: none;
   position: relative;
   width: 556px;
+  height: 242px;
   padding: 62px 65px;
   display: flex;
   justify-content: flex-start;
@@ -69,11 +70,8 @@
   background-color: $color-resolution-blue;
   color: $color-default-white;
 
-  @include vp-1199 {
-
-  }
-
   @include vp-767 {
+    height: 335px;
     padding: 40px 25px;
   }
 }
@@ -91,6 +89,11 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.feedback__text {
+  height: 100%;
+  overflow-y: auto;
 }
 
 .feedback__item h3 {
